--- a/codebook/cbook.vcxproj.filters
+++ b/codebook/cbook.vcxproj.filters
@@ -11,7 +11,39 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\codeword.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\imageprocessing.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\codebook.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\codebooksmanager.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CIEDE2000.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\imageprocessing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\codebook.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\codebooksmanager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\codeword.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CIEDE2000.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
